Stellar website outline added

--- a/First Try Pages/style_sheet.css
+++ b/First Try Pages/style_sheet.css
@@ -39,6 +39,8 @@ li a:hover {
   background-color: #03588C;
   color: white;
   text-align: center;
+  border: none;
+  text-decoration: none;
 }
 
 .button:hover{
